# fathah_python

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
fathah/: Diacritics.py  TextClean.py  stopwords.py
