[metadata]
name = fathah
version = 0.0.1
author = Abdul Fathah KA
author_email = fathah@ziqx.in
description = Lightweight NLP preprocessing package for Arabic language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fathah/fathah_python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True